--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">RIFATON SOLIDARIO</div>
-        <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+        <div class="intro-lead-in">Un grupo de Amig@s organiza un:</div>
+        <div class="intro-heading text-uppercase">Rifaton Solidario</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
       </div>
     </div>
