--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Un grupo de Amig@s organiza un:</div>
         <div class="intro-heading text-uppercase">Rifaton Solidario</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Auspiciantes!</a>
       </div>
     </div>
   </header>
