Agregando auspiciantes y streaming

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/myStyle.css">
 
   <!-- Custom styles for this template -->
   <link href="css/agency.min.css" rel="stylesheet">
@@ -30,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">El RIFATOON</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -63,7 +64,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Un grupo de Amig@s organiza un:</div>
         <div class="intro-heading text-uppercase">Rifaton Solidario</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Auspiciantes!</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Premios!</a>
       </div>
     </div>
   </header>
@@ -113,7 +114,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Auspiciantes</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
       <div class="row">
@@ -124,11 +125,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/sponsor/cubic.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4></h4>
+            <p class="text-muted"></p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -138,11 +139,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/sponsor/naow.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4></h4>
+            <p class="text-muted"></p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -152,11 +153,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/sponsor/kolorfoto.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+            <h4></h4>
+            <p class="text-muted"></p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -166,11 +167,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/sponsor/Titu.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
+            <h4></h4>
+            <p class="text-muted"></p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -180,13 +181,14 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/sponsor/La Salva.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
+            <h4></h4>
+            <p class="text-muted"></p>
           </div>
         </div>
+        <!--
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
             <div class="portfolio-hover">
@@ -201,6 +203,7 @@
             <p class="text-muted">Photography</p>
           </div>
         </div>
+      -->
       </div>
     </div>
   </section>
@@ -336,12 +339,12 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Streaming</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Transmision en VIVO <br>Viernes 17 de Mayo a las 15H00</h3>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/85MppyLJHz0?autohide=1" allowfullscreen></iframe>
+        <div class="video-live">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/55DIp_qznHI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <!--
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
@@ -420,7 +423,7 @@
     -->
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+          <p class="large text-muted"></p>
         </div>
       </div>
     </div>
@@ -455,6 +458,7 @@
   </section>
 
   <!-- Contact -->
+  <!--
   <section id="contact">
     <div class="container">
       <div class="row">
@@ -498,6 +502,7 @@
       </div>
     </div>
   </section>
+-->
 
   <!-- Footer -->
   <footer>
@@ -542,6 +547,7 @@
   <!-- Portfolio Modals -->
 
   <!-- Modal 1 -->
+  <!--
   <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -554,7 +560,8 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <!-- Project Details Go Here -->
+
+                <!-- Project Details Go Here ->
                 <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
@@ -574,8 +581,10 @@
       </div>
     </div>
   </div>
+-->
 
   <!-- Modal 2 -->
+  <!--
   <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -588,7 +597,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <!-- Project Details Go Here -->
+                <!-- Project Details Go Here ->
                 <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
@@ -608,7 +617,7 @@
       </div>
     </div>
   </div>
-
+-->
   <!-- Modal 3 -->
   <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
@@ -623,18 +632,18 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">KOLORFOTO</h2>
+                <!--p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p-->
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/promocion-03.jpg" alt="">
+                <p></p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Finish</li>
-                  <li>Category: Identity</li>
+                  <li><b>Direccion:</b> Bolivar entre 10 de Agosto y Jose Antonio Aguiguren <br>(Junto a la Mutualista Pichincha)</li>
+                  <li><b>Telefono:</b> 2572620 - 0992208526</li>
+                  <li><b>Horatio de Atención:</b> Lun a Vie de 9am a 7:30pm<br>Sabados de 9am a 4pm</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  Close</button>
               </div>
             </div>
           </div>
@@ -644,6 +653,7 @@
   </div>
 
   <!-- Modal 4 -->
+  <!--
   <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -656,7 +666,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <!-- Project Details Go Here -->
+                <!-- Project Details Go Here ->
                 <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
@@ -676,8 +686,10 @@
       </div>
     </div>
   </div>
+-->
 
   <!-- Modal 5 -->
+  <!--
   <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -690,7 +702,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <!-- Project Details Go Here -->
+                <!-- Project Details Go Here ->
                 <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
@@ -710,8 +722,10 @@
       </div>
     </div>
   </div>
+-->
 
   <!-- Modal 6 -->
+  <!--
   <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -724,7 +738,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <!-- Project Details Go Here -->
+                <!-- Project Details Go Here ->
                 <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
@@ -744,6 +758,7 @@
       </div>
     </div>
   </div>
+-->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
