--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
 
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <h4>Be Part
-                  <br>Of Our
-                  <br>Story!</h4>
+                <h4>Se Parte
+                  <br>De Nuestra
+                  <br>Historia!</h4>
               </div>
             </li>
           </ul>
@@ -369,7 +369,7 @@
               </li>
             </ul>
           </div>
-        -->
+
         </div>
         <!--
         <div class="col-sm-4">
