--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Premios</h2>
-          <h3 class="section-subheading text-muted">Contamos con extraordonadios premios.</h3>
+          <h3 class="section-subheading text-muted">Contamos con extraordinarios premios.</h3>
         </div>
       </div>
       <div class="row">
