subiendo ultimos cambios

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>RIFATOON</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">El RIFATOON</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">RIFATOON</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -62,7 +62,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Un grupo de Amig@s organiza un:</div>
+        <div class="intro-lead-in">Para auspiciar proyectos innovadores un grupo de amigos(as) se une y organiza un:</div>
         <div class="intro-heading text-uppercase">Rifaton Solidario</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Premios!</a>
       </div>
@@ -227,7 +227,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
 
-                  <h4>Bar Cubic</h4>
+                  <h4><span class="premio">1er. Premio: </span>Bar Cubic</h4>
 
                   <h4 class="subheading">Botella De Gin</h4>
                 </div>
@@ -237,11 +237,11 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/p2.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/about/p-2.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Kolorfoto</h4>
+                  <h4><span class="premio">2do. Premio: </span>Kolorfoto</h4>
                   <h4 class="subheading">Cuadro 20*30</h4>
                 </div>
                 <div class="timeline-body">
@@ -255,7 +255,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>La Salva</h4>
+                  <h4><span class="premio">3er. Premio: </span>La Salva</h4>
                   <h4 class="subheading">Orden De Consumo</h4>
                 </div>
                 <div class="timeline-body">
@@ -269,7 +269,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Cocteles Titu</h4>
+                  <h4><span class="premio">4to. Premio: </span>Cocteles Titu</h4>
                   <h4 class="subheading">Orden De Consumo</h4>
                 </div>
                 <div class="timeline-body">
@@ -283,7 +283,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Premio sorpresa</h4>
+                  <h4><span class="premio">5to. Premio: </span>Premio sorpresa</h4>
                   <h4 class="subheading">Secreto</h4>
                 </div>
                 <div class="timeline-body">
@@ -297,7 +297,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Premio sorpresa</h4>
+                  <h4><span class="premio">6to. Premio: </span>Premio sorpresa</h4>
                   <h4 class="subheading">Secreto</h4>
                 </div>
                 <div class="timeline-body">
@@ -311,7 +311,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Premio sorpresa</h4>
+                  <h4><span class="premio">7mo. Premio: </span>Premio sorpresa</h4>
                   <h4 class="subheading">Secreto</h4>
                 </div>
                 <div class="timeline-body">
@@ -436,22 +436,22 @@
       <div class="row">
         <div class="col-md-3 col-sm-6">
           <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
+            <img class="img-fluid d-block mx-auto" src="img/logos/cubic.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6">
           <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
+            <img class="img-fluid d-block mx-auto" src="img/logos/kolorfoto.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6">
           <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
+            <img class="img-fluid d-block mx-auto" src="img/logos/naow.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6">
           <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
+            <img class="img-fluid d-block mx-auto" src="img/logos/La Salva.jpg" alt="">
           </a>
         </div>
       </div>
@@ -512,6 +512,7 @@
         <div class="col-md-4">
           <span class="copyright">Copyright &copy; Your Website 2019</span>
         </div>
+        <!--
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
@@ -531,6 +532,8 @@
             </li>
           </ul>
         </div>
+      -->
+      <!--
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
@@ -541,6 +544,7 @@
             </li>
           </ul>
         </div>
+      -->
       </div>
     </div>
   </footer>
