arreglando img auspiciantes

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/sponsor/cubic.jpg" alt="">
+            <img class="img-fluid" src="img/cubic.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4></h4>
@@ -139,7 +139,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/sponsor/naow.jpg" alt="">
+            <img class="img-fluid" src="img/naow.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4></h4>
@@ -153,7 +153,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/sponsor/kolorfoto.png" alt="">
+            <img class="img-fluid" src="img/kolorfoto.png" alt="">
           </a>
           <div class="portfolio-caption">
             <h4></h4>
@@ -167,7 +167,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/sponsor/Titu.jpg" alt="">
+            <img class="img-fluid" src="img/Titu.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4></h4>
@@ -181,7 +181,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/sponsor/La Salva.jpg" alt="">
+            <img class="img-fluid" src="img/La Salva.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4></h4>
