--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
         <div class="intro-lead-in">Para auspiciar proyectos innovadores un grupo de amigos(as) se une y organiza un:</div>
         <div class="intro-heading text-uppercase">Rifaton Solidario</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Premios!</a>
-        <div id="sfcqbjm5wd5mxn1pkjcspu47y8sdpky9y16" style="margin-top:25px; "></div>
+        <div id="sfcqbjm5wd5mxn1pkjcspu47y8sdpky9y16" style="margin-top:50px; "></div>
 <script type="text/javascript" src="https://counter6.wheredoyoucomefrom.ovh/private/counter.js?c=qbjm5wd5mxn1pkjcspu47y8sdpky9y16&down=async" async></script>
 <noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas para web"><img src="https://counter6.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=qbjm5wd5mxn1pkjcspu47y8sdpky9y16" border="0" title="contador de visitas para web" alt="contador de visitas para web"></a></noscript>
+        <div class="intro-lead-in" style="margin-top:15px;">Visitas</div>
       </div>
     </div>
   </header>
